--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,19 @@ services:
       - ./pages:/app/pages
       - ./public:/app/public
       - ./styles:/app/styles
+  db:
+    image: mysql:5.7
+    restart: unless-stopped
+    environment: 
+      MYSQL_DATABASE: 'user_stats'
+      MYSQL_USER: 'user'
+      MYSQL_PASSWORD: 'password123' #CHANGE!!!
+      MYSQL_ROOT_PASSWORD: 'password123' #CHANGE!!!
+    ports: 
+      - 3306:3306
+    volumes:                           # mysql -h localhost -P 3306 --protocol=tcp -u user -ppassword123
+      - mysql-volume:/var/lib/mysql
+
+volumes:
+  mysql-volume:
+
