--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "next build"
   },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "next": "latest",
+    "prisma": "^4.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
