--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,10 +1,16 @@
-FROM node:18-alpine
-
+FROM node:18-alpine AS builder
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+RUN apk add --no-cache libc6-compat
 WORKDIR /app
+COPY . .
+RUN npm ci
+ENV NEXT_TELEMETRY_DISABLED 1
+RUN npx prisma generate
+RUN mkdir -p /app/.next/cache/images
+# runner image, copy all the files and run next
+FROM node:18-alpine AS runner
+WORKDIR /app
+ENV NEXT_TELEMETRY_DISABLED 1
+COPY --from=builder /app/ ./
 
-COPY package.json package-lock.json ./
-RUN npm install
-
-COPY next.config.js ./next.config.js
-
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run","dev"]
